--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>D3v_0ps | Software Engineer Portfolio</title>
+    <title>Piyush Portfolio</title>
     <meta name="description" content="Software engineer portfolio with cybersecurity and full-stack development expertise" />
     <meta name="author" content="piyush" />
 
