--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piyush Portfolio</title>
-    <meta name="description" content="Software engineer portfolio with cybersecurity and full-stack development expertise" />
+    <meta name="description" content="Piyush Portfolio" />
     <meta name="author" content="piyush" />
 
     <meta property="og:title" content="piyush_tiwari" />
-    <meta property="og:description" content="Software engineer portfolio with cybersecurity and full-stack development expertise" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;700&family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
