--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <meta property="og:title" content="piyush_tiwari" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://piyush-web.netlify.app/" />
+    <meta property="og:image" content="https://photos.app.goo.gl/oqGthNQpbbH47CPJ8" />
+    <meta property="og:description" content="Piyush Portfolio" />   
 
     
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;700&family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
