--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Piyush Portfolio" />
     <meta name="author" content="piyush" />
 
-    <meta property="og:title" content="piyush_tiwari" />
+    <meta property="og:title" content="Piyush_Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://piyush-web.netlify.app/" />
-    <meta property="og:image" content="https://photos.app.goo.gl/oqGthNQpbbH47CPJ8" />
+    <meta property="og:image" content="https://drive.google.com/file/d/1fjhkIMCjZ_DNluOZj1z6mPNdI2T894aq/view?usp=sharing" />
     <meta property="og:description" content="Piyush Portfolio" />   
 
     
