--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Piyush_Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://piyush-web.netlify.app/" />
-    <meta property="og:image" content="https://drive.google.com/file/d/1fjhkIMCjZ_DNluOZj1z6mPNdI2T894aq/view?usp=sharing" />
+    <meta property="og:image" content="./public/img/web-image.png" />
     <meta property="og:description" content="Piyush Portfolio" />   
 
     
